# Backend

./: Config.py  LICENSE  Main.py  README.md  pyproject.toml  requirements.txt
Data/: Operations.json
Scripts/: Database.py  Lifespan.py  Network.py  Renderer.py  Utils.py
Scripts/Models/Requests/: Generate.py  __init__.py
Scripts/Routers/: Generate.py  Images.py  User.py  __init__.py
