[project]
name = "mccag"
version = "0.1.3"
description = "Minecraft Cute Avatar Generator"
authors = [
    {name = "SerinaNya", email = "34389622+SerinaNya@users.noreply.github.com"},
    {name = "Kyle Ma", email = "m2069134445@icloud.com"},
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "fastapi>=0.111.1",
    "uvicorn>=0.30.3",
    "pillow>=10.4.0",
    "motor>=3.5.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.scripts]
dev = { cmd = "uvicorn Minecraft_CAG.Main:app --host '0.0.0.0' --port 8023" }

[tool.pdm]
distribution = true

[tool.ruff]
extend-exclude = []
line-length = 120
target-version = "py312"